--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,52 @@ body {
     flex-wrap: wrap;
 }
 
+.menu-button {
+    display: none; 
+    position: fixed;
+    top: 10px;
+    right: 30px;
+    background-color: var(--gray-color);
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    font-size: 18px;
+    cursor: pointer;
+    z-index: 1000;
+}
+
+/* Sidebar */
+.sidebar {
+    display: none; 
+    position: fixed;
+    right: 0; 
+    top: 0;
+    width: 16rem;
+    background-color: #333;
+    padding-top: 70px;
+    z-index: 999;
+    transition: 0.3s;
+}
+
+.sidebar a {
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #fff;
+    display: block;
+}
+
+.sidebar a:hover {
+    background-color: #575757;
+}
+
+.sidebar.active {
+    display: block; 
+}
+
+.nav-links.hidden {
+    display: none;
+}
 
 .logo {
     height: 40px;
@@ -274,7 +320,6 @@ body {
     padding: 0 20px;
 }
 
-/* Estilos para o widget de zoom */
 .zoom-widget {
     position: fixed;
     bottom: 20px;
@@ -284,6 +329,7 @@ body {
     padding: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     z-index: 1000;
+    cursor: pointer;
 }
 
 .zoom-toggle {
@@ -365,9 +411,31 @@ footer {
         --font-size-base: 14px;
     }
 
+    .menu-button {
+        display: block;
+    }
+
+    .nav-links {
+        display: none;
+    }
+
+    .nav-bar {
+        display: flex; 
+        flex-direction: column;
+    }
+
     #planos-logo {
         max-width: 160px;
     }
+
+    .zoom-widget {
+        padding: 15px;
+    }
+
+    .logo {
+        margin: 0.8rem;
+    }
+    
 }
 
 @media (max-width: 768px) {
@@ -376,11 +444,11 @@ footer {
     }
 
     #planos-logo {
-        visibility: hidden;
+        display: none;
     }
-
-    .nav-bar {
-        flex-direction: column;
+    
+    .planos {
+        width: 100%;
     }
     
     .planos-desc {
@@ -398,6 +466,11 @@ footer {
     
     .artigo-container {
         flex-basis: 100%;
+    }
+
+    .zoom-widget {
+        bottom: 30px;
+        right: 30px;
     }
 }
 
