--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,7 +1,3 @@
-#register {
-    visibility: hidden;
-}
-
 body {
     background-color: #454545;
 
@@ -68,3 +64,8 @@ body {
 } .logbutton:hover {
     color:#333;
 }
+
+.register p {
+    color:white;
+}
+
