--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -5,20 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Archivo+Black&display=swap" rel="stylesheet">
     <title>Sobre - IFit</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/sobre.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/sobre.css') }}">
 </head>
 <body>
     <header id="navbar" class="top-bar font-archivo">
         <nav class="nav-bar container">
-            <img src="./images/ifit_high_resolution_logo_transparent_1.png" alt="IFit Logo" class="logo">
+            <img src="/static/images/ifit_high_resolution_logo_transparent_1.png" alt="IFit Logo" class="logo">
             <div class="nav-links">
-                <a href="index.html" role="button" class="top-bar-button">Início</a>
-                <a href="sobre.html" role="button" class="top-bar-button">Sobre</a>
-                <a href="planos.html" role="button" class="top-bar-button">Planos</a>
-                <a href="#" role="button" class="top-bar-button">Unidades</a>
-                <a href="contato.html" role="button" class="top-bar-button">Contato</a>
-                <a href="login.html" role="button" class="top-bar-button">Login</a>
+                <a href="{{ url_for('index') }}" role="button" class="top-bar-button">Início</a>
+                <a href="{{ url_for('sobre') }}" role="button" class="top-bar-button">Sobre</a>
+                <a href="{{ url_for('planos') }}" role="button" class="top-bar-button">Planos</a>
+                <a href="{{ url_for('contato') }}" role="button" class="top-bar-button">Contato</a>
+                {% if 'username' in session %}
+                    <a href="{{ url_for('logout') }}" class="top-bar-button">Logout</a>
+                {% else %}
+                    <a href="{{ url_for('login') }}" class="top-bar-button">Login</a>
+                {% endif %}
             </div>
         </nav>
     </header>
@@ -27,12 +30,15 @@
 
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar font-archivo">
-        <a href="index.html">Início</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="planos.html">Planos</a>
-        <a href="#">Unidades</a>
-        <a href="contato.html">Contato</a>
-        <a href="login.html">Login</a>
+        <a href="{{ url_for('index') }}">Início</a>
+        <a href="{{ url_for('sobre') }}">Sobre</a>
+        <a href="{{ url_for('planos') }}">Planos</a>
+        <a href="{{ url_for('contato') }}">Contato</a>
+        {% if 'username' in session %}
+            <a href="{{ url_for('logout') }}" class="top-bar-button">Logout</a>
+        {% else %}
+            <a href="{{ url_for('login') }}" class="top-bar-button">Login</a>
+        {% endif %}
     </div>
 
     <main>
@@ -55,14 +61,14 @@
             <div class="container">
                 <h2>Fundadores</h2>
                 <div class="fundador-container">
-                    <img src="./images/pedro.jpg" alt="Fundador 1" class="fundador-img">
+                    <img src="/static/images/pedro.jpg" alt="Fundador 1" class="fundador-img">
                     <div class="fundador-info">
                         <h3>Pedro Santos Cabral</h3>
                         <p>Com uma carreira sólida na área de educação física, Pedro Cabral trouxe sua paixão por esportes e bem-estar para fundar a IFit. Sua visão é transformar vidas através da prática de atividades físicas.</p>
                     </div>
                 </div>
                 <div class="fundador-container">
-                    <img src="./images/savio.png" alt="Fundador 2" class="fundador-img">
+                    <img src="/static/images/savio.png" alt="Fundador 2" class="fundador-img">
                     <div class="fundador-info">
                         <h3>Savio dos Santos Martins</h3>
                         <p>Savio Martins, com vasta experiência em gestão de academias, uniu-se para criar a IFit. Sua expertise em administração e treinamento garantiu que a IFit se tornasse uma referência em qualidade e inovação.</p>
@@ -84,17 +90,28 @@
         </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <p>© 2024 IFit. Todos Direitos Reservados.</p>
+    <div class="zoom-widget">
+        <button class="zoom-toggle">
+            🔍
+        </button>
+        <div class="zoom-options">
+            <button class="zoom-in">+</button>
+            <button class="zoom-out">−</button>
         </div>
-    </footer>
+    </div>
+    
 
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 
-    <script src="./script.js"></script>
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
